--- a/textproc/tree-sitter/Makefile
+++ b/textproc/tree-sitter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2025/01/29 13:42:31 adam Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/02 15:54:44 wiz Exp $
 
-DISTNAME=	tree-sitter-0.24.7
+DISTNAME=	tree-sitter-0.25.1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=tree-sitter/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -12,6 +12,6 @@ LICENSE=	mit
 
 USE_CC_FEATURES=	c11
 USE_TOOLS+=		gmake
-PKGCONFIG_OVERRIDE+=	tree-sitter.pc.in
+PKGCONFIG_OVERRIDE+=	lib/tree-sitter.pc.in
 
 .include "../../mk/bsd.pkg.mk"
