--- a/www/py-h2/Makefile
+++ b/www/py-h2/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2022/01/04 20:55:29 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/02/02 16:04:23 wiz Exp $
 
-DISTNAME=	h2-4.1.0
+DISTNAME=	h2-4.2.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/h2/}
 
@@ -11,15 +10,12 @@ HOMEPAGE=	https://github.com/python-hyper/h2
 COMMENT=	HTTP/2 State-Machine based protocol implementation
 LICENSE=	mit
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-hyperframe>=6.0.0:../../www/py-hyperframe
 DEPENDS+=	${PYPKGPREFIX}-hpack>=4.0:../../net/py-hpack
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
+TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis-[0-9]*:../../devel/py-hypothesis
 
 USE_LANGUAGES=	# none
 
-PYSETUPTESTTARGET=	pytest
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
