--- a/devel/py-isort/Makefile
+++ b/devel/py-isort/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2023/12/14 13:19:33 adam Exp $
+# $NetBSD: Makefile,v 1.29 2025/02/02 16:16:34 wiz Exp $
 
-DISTNAME=	isort-5.13.2
+DISTNAME=	isort-6.0.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/isort/}
@@ -10,8 +10,9 @@ HOMEPAGE=	https://github.com/PyCQA/isort
 COMMENT=	Python utility/library to sort imports
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling>=0:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-colorama>=0.4.:../../comms/py-colorama
+TEST_DEPENDS+=	git-base-[0-9]*:../../devel/git-base
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=6.10.1:../../devel/py-hypothesis
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesmith>=0.1.3:../../devel/py-hypothesmith
 TEST_DEPENDS+=	${PYPKGPREFIX}-black>=0:../../textproc/py-black
@@ -21,7 +22,10 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-toml>=0.10.2:../../textproc/py-toml
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+# 18 failed, 544 passed, 1 skipped, 1 xfailed, 70 warnings, 3 errors
+# for testing:
+#ALLOW_NETWORK_ACCESS=	yes
+# 9 failed, 553 passed, 1 skipped, 1 xfailed, 69 warnings, 3 errors
 
 post-install:
 .for bin in isort isort-identify-imports
