--- a/textproc/tree-sitter/Makefile
+++ b/textproc/tree-sitter/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2025/02/02 15:54:44 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/02 17:51:10 wiz Exp $
 
 DISTNAME=	tree-sitter-0.25.1
+PKGREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=tree-sitter/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -13,5 +14,8 @@ LICENSE=	mit
 USE_CC_FEATURES=	c11
 USE_TOOLS+=		gmake
 PKGCONFIG_OVERRIDE+=	lib/tree-sitter.pc.in
+# for be16toh and friends
+# https://github.com/tree-sitter/tree-sitter/issues/4180
+CFLAGS.NetBSD+=		-D_NETBSD_SOURCE
 
 .include "../../mk/bsd.pkg.mk"
