--- a/textproc/py-orjson/Makefile
+++ b/textproc/py-orjson/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2025/02/02 16:09:06 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2025/02/02 18:09:30 wiz Exp $
 
 DISTNAME=	orjson-3.10.15
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/ijl/orjson
 COMMENT=	Fast, correct Python JSON library
 LICENSE=	apache-2.0 OR mit
+
+RUST_REQ=	1.82.0
 
 .include "cargo-depends.mk"
 
