--- a/mail/vmailmgr/Makefile
+++ b/mail/vmailmgr/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2024/02/25 12:09:21 schmonz Exp $
+# $NetBSD: Makefile,v 1.2 2025/02/02 20:13:27 schmonz Exp $
 
 .include "../../mail/vmailmgr/version.mk"
 
@@ -14,9 +14,10 @@ DEPENDS+=	vmailmgr-base>=${VERSION}:../../mail/vmailmgr-base
 DEPENDS+=	vmailmgr-cgi>=${VERSION}:../../mail/vmailmgr-cgi
 DEPENDS+=	vmailmgr-courier-imap>=${VERSION}:../../mail/vmailmgr-courier-imap
 DEPENDS+=	vmailmgr-docs>=${VERSION}:../../mail/vmailmgr-docs
-DEPENDS+=	php-vmailmgr>=${VERSION}:../../mail/php-vmailmgr
+DEPENDS+=	${PHP_PKG_PREFIX}-vmailmgr>=${VERSION}:../../mail/php-vmailmgr
 DEPENDS+=	py-vmailmgr>=${VERSION}:../../mail/py-vmailmgr
 
 META_PACKAGE=	yes
 
+.include "../../lang/php/phpversion.mk"
 .include "../../mk/bsd.pkg.mk"
