--- a/mail/py-vmailmgr/Makefile
+++ b/mail/py-vmailmgr/Makefile
@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.2 2024/02/27 19:13:44 schmonz Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/02 20:28:40 schmonz Exp $
 
 .include "../../mail/vmailmgr/Makefile.common"
 
-PKGNAME=		py-vmailmgr-${VERSION}
+PKGNAME=		${PYPKGPREFIX}-vmailmgr-${VERSION}
 CATEGORIES=		mail python
 
 MAINTAINER=		schmonz@NetBSD.org
 HOMEPAGE=		https://untroubled.org/vmailmgr/
 COMMENT=		Virtual domain manager for qmail (Python bindings)
 LICENSE=		gnu-gpl-v2
+
+CONFLICTS+=		py-vmailmgr-[0-9]*
 
 CONFIGURE_ARGS+=	--enable-python
 CONFIGURE_ENV+=		PYTHONBIN=${PYTHONBIN:Q}
