--- a/www/drupal11/Makefile
+++ b/www/drupal11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2025/01/13 00:07:29 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/03 00:01:37 taca Exp $
 
 DISTNAME=	drupal-11.1.0
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
@@ -40,19 +40,17 @@ CONF_FILES_PERMS+=	share/examples/drupal/default.settings.php \
 			${DRUPAL}/sites/default/settings.php \
 			${WWW_USER} ${WWW_GROUP} 0640
 
-REPLACE_INTERPRETER+=	php
-REPLACE.php.old=	/usr/bin/env php
-REPLACE.php.new=	${PREFIX}/bin/php
-REPLACE_FILES.php=	core/scripts/drupal.sh core/scripts/password-hash.sh
-REPLACE_FILES.php+=	core/scripts/rebuild_token_calculator.sh
-REPLACE_FILES.php+=	vendor/bin/var-dump-server
-REPLACE_FILES.php+=	vendor/symfony/var-dumper/Resources/bin/var-dump-server
-
-REPLACE_INTERPRETER+=	php2
-REPLACE.php2.old=	.*php
-REPLACE.php2.new=	${PREFIX}/bin/php
-REPLACE_FILES.php2=	core/scripts/update-countries.sh
-REPLACE_FILES.php2+=	vendor/pear/archive_tar/scripts/phptar.in
+REPLACE_PHP+=	core/scripts/drupal.sh core/scripts/password-hash.sh
+REPLACE_PHP+=	core/scripts/rebuild_token_calculator.sh
+REPLACE_PHP+=	core/scripts/update-countries.sh
+REPLACE_PHP+=	vendor/bin/var-dump-server
+REPLACE_PHP+=	vendor/bin/patch-type-declarations
+REPLACE_PHP+=	vendor/bin/yaml-lint
+REPLACE_PHP+=	vendor/pear/archive_tar/scripts/phptar.in
+REPLACE_PHP+=	vendor/symfony/error-handler/Resources/bin/extract-tentative-return-types.php
+REPLACE_PHP+=	vendor/symfony/error-handler/Resources/bin/patch-type-declarations
+REPLACE_PHP+=	vendor/symfony/var-dumper/Resources/bin/var-dump-server
+REPLACE_PHP+=	vendor/symfony/yaml/Resources/bin/yaml-lint
 
 REPLACE_BASH+=		core/scripts/dev/commit-code-check.sh
 
@@ -85,6 +83,6 @@ do-install:
 	cd ${WRKSRC} && ${PAX} -rw . ${DESTDIR}${PREFIX}/${DRUPAL}
 
 
-.include "../../lang/php/phpversion.mk"
+.include "../../lang/php/replace.mk"
 .include "../../lang/php/json.mk"
 .include "../../mk/bsd.pkg.mk"
