--- a/www/p5-CGI/Makefile
+++ b/www/p5-CGI/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.117 2024/11/16 12:07:27 wiz Exp $
+# $NetBSD: Makefile,v 1.118 2025/02/03 01:07:16 wen Exp $
 
-DISTNAME=	CGI-4.66
+DISTNAME=	CGI-4.67
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES+=	${MASTER_SITE_PERL_CPAN:=CGI/}
 
