--- a/devel/py-test-plus/Makefile
+++ b/devel/py-test-plus/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2025/02/01 18:37:04 adam Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/03 08:31:04 adam Exp $
 
-DISTNAME=	pytest_plus-0.8.0
+DISTNAME=	pytest_plus-0.8.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pytest_/test-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-plus/}
@@ -17,6 +17,8 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-coverage>=7.0.0:../../devel/py-coverage
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-html>0:../../devel/py-test-html
 
 USE_LANGUAGES=	# none
+
+PYTHON_VERSIONS_INCOMPATIBLE=	39
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
