--- a/www/py-pylsqpack/Makefile
+++ b/www/py-pylsqpack/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2024/11/11 07:29:26 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/03 08:43:42 adam Exp $
 
-DISTNAME=	pylsqpack-0.3.18
+DISTNAME=	pylsqpack-0.3.19
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pylsqpack/}
@@ -11,8 +11,6 @@ COMMENT=	Python wrapper for the ls-qpack QPACK library
 LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
