--- a/devel/R-evaluate/Makefile
+++ b/devel/R-evaluate/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/10/18 12:22:13 mef Exp $
+# $NetBSD: Makefile,v 1.14 2025/02/03 13:48:08 mef Exp $
 
 R_PKGNAME=	evaluate
-R_PKGVER=	1.0.1
+R_PKGVER=	1.0.3
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,6 +13,12 @@ DEPENDS+=	R-stringr>=0.6.2:../../textproc/R-stringr
 TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 TEST_DEPENDS+=	R-ggplot2-[0-9]*:../../graphics/R-ggplot2
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
