--- a/devel/capnproto/Makefile
+++ b/devel/capnproto/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2023/10/24 22:08:42 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2025/02/03 16:59:10 adam Exp $
 
-DISTNAME=	capnproto-c++-0.8.0
-PKGNAME=	${DISTNAME:S/capnproto-c++-/capnproto-/}
-PKGREVISION=	1
+DISTNAME=	capnproto-c++-1.1.0
+PKGNAME=	${DISTNAME:S/-c++-/-/}
 CATEGORIES=	devel
 MASTER_SITES=	https://capnproto.org/
 
@@ -11,16 +10,20 @@ HOMEPAGE=	https://capnproto.org/
 COMMENT=	Cap'n Proto - Insanely Fast Data Serialization Format
 LICENSE=	mit
 
-GNU_CONFIGURE=	yes
-USE_LIBTOOL=	yes
-USE_TOOLS+=	pkg-config
-USE_LANGUAGES=	c c++
-
-USE_CXX_FEATURES+=	c++14
+USE_CXX_FEATURES=	c++14
+USE_LANGUAGES=		c c++
+USE_LIBTOOL=		yes
+USE_TOOLS+=		pkg-config
+GNU_CONFIGURE=		yes
+# Fibers are not supported on BSD platforms: see src/kj/async.h
+CONFIGURE_ARGS+=	--without-fibers
+TEST_TARGET=		check
 
 PKGCONFIG_OVERRIDE+=	pkgconfig/capnp-json.pc.in
 PKGCONFIG_OVERRIDE+=	pkgconfig/capnp-rpc.pc.in
+PKGCONFIG_OVERRIDE+=	pkgconfig/capnp-websocket.pc
 PKGCONFIG_OVERRIDE+=	pkgconfig/capnp.pc.in
+PKGCONFIG_OVERRIDE+=	pkgconfig/capnpc.pc.in
 PKGCONFIG_OVERRIDE+=	pkgconfig/kj-async.pc.in
 PKGCONFIG_OVERRIDE+=	pkgconfig/kj-gzip.pc.in
 PKGCONFIG_OVERRIDE+=	pkgconfig/kj-http.pc.in
