--- a/devel/py-factory_boy/Makefile
+++ b/devel/py-factory_boy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2024/11/11 07:28:07 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/03 17:00:35 adam Exp $
 
-DISTNAME=	factory_boy-3.3.1
+DISTNAME=	factory_boy-3.3.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=f/factory_boy/}
