--- a/textproc/man2html/Makefile
+++ b/textproc/man2html/Makefile
@@ -1,16 +1,13 @@
-# $NetBSD: Makefile,v 1.9 2022/06/28 11:36:12 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/03 21:13:48 bacon Exp $
 
-DISTNAME=	man2html3.0.1
-PKGNAME=	${DISTNAME:S/html/html-/}
-PKGREVISION=	5
+DISTNAME=	man2html-${PKGVERSION}
+PKGNAME=	man2html-20240105
 CATEGORIES=	textproc
-MASTER_SITES+=	https://acadix.biz/Ports/distfiles/
-MASTER_SITES+=	http://hydra.nac.uci.edu/indiv/ehood/tar/
-MASTER_SITES+=	${MASTER_SITE_PERL_CPAN:=../../authors/Earl_Hood/}
-MASTER_SITES+=	http://people.freebsd.org/~demon/
+MASTER_SITES+=	https://invisible-island.net/archives/man2html/
+EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://www.nongnu.org/man2html/
+HOMEPAGE=	https://invisible-island.net/scripts/man2html.html
 COMMENT=	Convert nroff(1) man pages to HTML
 LICENSE=	gnu-gpl-v2
 
